# z80_la

./: README.md
z80_la/: CMakeLists.txt  CMakeLists.txt~  z80_la.c  z80_la.c~
z80_la/traces/: f9k-clk-1-picocart-2.txt  f9k-clk-1-picocart-3-bad.txt  f9k-clk-1-picocart-4-bad.txt  f9k-clk-1.txt  f9k-clk-2.txt  f9k-clk-3.txt  f9k-clk-4-ok.txt  f9k-clk-5-ok.txt  f9k-clk-6-ok-ramchip-cartridge-good.txt  f9k-clk-picocart-bad-30msps-10.txt  f9k-clk-picocart-bad-30msps-3.txt  f9k-clk-picocart-good-30msps-4.txt  f9k-clk-ramcart-bat-good-30msps-2.txt  f9k-clk-ramcart-bat-good-30msps-3.txt  f9k-clk-ramcart-good-10.txt  f9k-clk-ramcart-good-30msps-11.txt  f9k-clk-ramcart-nobat-good-30msps-1.txt  fx9k-aa-good.txt  fx9k-aa-good2.txt  fx9k-aa-good3.txt  fx9k-aa-good4.txt  fx9k_a.txt  fx9k_b_reset.txt  fx9k_c_reset.txt  fx9k_d_reset_pico_cart.txt
